--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,8 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "react/prop-types": 0,
+    "react/refer-stateless-function": 0
+  }
 }
